--- a/.github/workflows/mirror.yml
+++ b/.github/workflows/mirror.yml
@@ -15,4 +15,4 @@ jobs:
         run: |
           git clone --mirror https://gitverse.ru/Zavalar/twitch_chat_parser.git mirror
           cd mirror
-          git push --mirror https://${GH_TOKEN}@github.com/USER/REPO.git
+          git push --mirror https://${GH_TOKEN}@github.com/Ishafel/twitch_chat_parser.git
